# ai-assistants-cfg

./: .gitignore  .markdownlintignore  .mcp.json  AGENTS.md  AGENTS.md.tmpl  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  README_DEV.md  ROADMAP.md  TODO.md  bump_output.txt  commit-conventions.md  install.sh  install_claude.sh  install_codex.sh  install_cursor.sh  new_cc_project.sh  new_project.sh  pyproject.toml
.ai-state/: ARCHITECTURE.md  ARCHITECTURE_CHANGELOG.md  DESIGN.md  DESIGN_CHANGELOG.md  IDEA_LEDGER_2026-02-09_17-30-00.md  LANDSCAPE_WATCHLIST.md  METRICS_LOG.md  METRICS_REPORT_2026-04-24_16-25-23.json  METRICS_REPORT_2026-04-24_16-25-23.md  METRICS_REPORT_2026-04-24_17-49-50.json  METRICS_REPORT_2026-04-24_17-49-50.md  METRICS_REPORT_2026-04-24_17-51-08.json  METRICS_REPORT_2026-04-24_17-51-08.md  METRICS_REPORT_2026-04-24_17-51-23.json  METRICS_REPORT_2026-04-24_17-51-23.md  PROJECT_INDEX.md  SENTINEL_LOG.md  SYSTEM_DEPLOYMENT.md  TECH_DEBT_LEDGER.md  TECH_DEBT_RESOLVED.md  TOKEN_BUDGETING_2026-02-09_11-56-42.md  TOKEN_BUDGETING_2026-02-09_15-18-42.md  UPSTREAM_ISSUES.md  calibration_log.md  decisions.jsonl  doc_manifest.yaml  memory.json  memory.pre-forget.json  observations.jsonl
.claude/: CLAUDE.md  claude_desktop_config.json  praxion-rules.yaml  praxion-rules.yaml.example  settings.json  userPreferences.txt
.claude-plugin/: CLAUDE.md  PLUGIN_SCHEMA_NOTES.md  marketplace.json  plugin.json
.obsidian/: app.json
.sentrux/: baseline.json  rules.toml
agents/: CLAUDE.md  README.md  cicd-engineer.md  (+15 more)
task-chronograph-mcp/: README.md  pyproject.toml
task-chronograph-mcp/src/task_chronograph_mcp/: __init__.py  __main__.py  events.py  file_watcher.py  otel_relay.py  server.py
task-chronograph-mcp/src/task_chronograph_mcp/dashboard/: __init__.py  routes.py
task-chronograph-mcp/src/task_chronograph_mcp/dashboard/templates/: base.html  dashboard.html
task-chronograph-mcp/src/task_chronograph_mcp/dashboard/templates/partials/: agent_card.html  interaction_row.html  phase_bar.html  timeline.html
task-chronograph-mcp/tests/: conftest.py  test_events.py  test_file_watcher.py  test_hook_script.py  test_otel_relay.py  test_otel_relay_session_id.py  test_phoenix_diagnostic.py  test_server.py
(+1049 files in other folders)
